<resources>
    <string name="app_name">nbcamp_android_basic</string>
    <string name="log_in">로그인</string>
    <string name="sign_in">회원가입</string>
    <string name="password">비밀번호</string>
    <string name="id">아이디</string>
    <string name="put_id">아이디를 입력하세요</string>
    <string name="put_password">비밀번호를 입력하세요</string>
    <string name="name">이름</string>
    <string name="put_name">이름을 입력하세요</string>
    <string name="btn_end">종료</string>
    <string name="do_not_input_id">아이디가 입력되지 않았습니다.</string>
    <string name="do_not_input_pwd">비밀번호가 입력되지 않았습니다.</string>
    <string name="check_id_pwd">아이디/비밀번호를 확인해주세요</string>
    <string name="check_id">아이디를 확인해주세요</string>
    <string name="check_pwd">비밀번호를 확인해주세요</string>
    <string name="log_in_success">로그인 성공</string>
    <string name="empty_info_exist">입력되지 않은 정보가 있습니다.</string>
    <string name="duplicated_id">중복된 아이디가 있습니다.</string>
    <string name="check_name">이름을 확인해주세요</string>
</resources>